TODO
* add split flags to pass control of buffer mgt to split string ?
* complete stand alone version
* add tests

20130503
* small changes

20130404
* textual changes
* updated dependencies
* fix for Libs in .pc file

20130403
* updated dependencies

20130113
* updated msvscpp files

20130103
* changes to .gitignore
* 2013 update

20121224
* changes to .gitignore
* added msvscpp files

20121103
* code clean up
* bug fixes in error handling

20120919
* updated dependencies

20120701
* Initial version split of from libcpath
* Worked on stand-alone version
